2ème partie refactorisation code avec annotation lombok + rôle admin boolean