@@ -1,42 +1,41 @@
 package com.FishOn.FishOn.Controller;
 
 import com.FishOn.FishOn.Service.CommentService;
-
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.server.ResponseStatusException;
-
 import com.FishOn.FishOn.Config.CustomUserDetails;
 import com.FishOn.FishOn.DTO.Comment.*;
 import com.FishOn.FishOn.Model.CommentModel;
-
 import com.FishOn.FishOn.Exception.FishOnException.*;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 import jakarta.validation.Valid;
 
-
+/**
+ * Controller REST pour la gestion des commentaires
+ * LOMBOK UTILISÉ :
+ * @RequiredArgsConstructor : Injection par constructeur automatique
+ * @Slf4j : Logger automatique
+ */
 @RestController
 @RequestMapping("/api/comments")
+@RequiredArgsConstructor // LOMBOK : Remplace @Autowired
+@Slf4j // LOMBOK : Logger automatique
 public class CommentController {
 
-    @Autowired
-    private CommentService commentService;
+    private final CommentService commentService;
 
-
-    // Méthode CRUD
     @PostMapping("/post/{postId}")
-    public CommentResponseDTO createComment(@PathVariable UUID postId, @Valid @RequestBody CommentCreateDTO commentCreateDTO, Authentication authentication)
-    throws UserNotFoundById, PostNotFoundById {
+    public CommentResponseDTO createComment(@PathVariable UUID postId, @Valid @RequestBody CommentCreateDTO commentCreateDTO,
+                                            Authentication authentication)
+            throws UserNotFoundById, PostNotFoundById {
 
-        // Vérification de sécurité identique aux autres controllers
         if (authentication == null || !authentication.isAuthenticated()) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
         }
@@ -45,28 +44,27 @@ public class CommentController {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
         }
 
-        // Récupération de l'ID utilisateur depuis l'authentification
-        CustomUserDetails userDetails = (CustomUserDetails) authentication.getPrincipal();
-        UUID currentUserId = userDetails.getUser().getId();
+        var userDetails = (CustomUserDetails) authentication.getPrincipal();
+        var currentUserId = userDetails.getUser().getId();
 
-        CommentModel comment = new CommentModel(commentCreateDTO.getContent());
+        // LOMBOK : Utilisation du Builder pattern
+        var comment = CommentModel.builder()
+                .content(commentCreateDTO.getContent())
+                .build();
 
-        CommentModel savedComment = commentService.createComment(comment,  currentUserId, postId);
+        var savedComment = commentService.createComment(comment, currentUserId, postId);
 
-        return new CommentResponseDTO(
-                savedComment.getId(),
-                savedComment.getContent(),
-                savedComment.getCreatedAt(),
-                savedComment.getUpdatedAt(),
-                savedComment.getUser().getUserName(),
-                savedComment.getUser().getProfilePicture()
-        );
+        log.info("Nouveau commentaire créé par {}: {}",
+                userDetails.getUser().getUserName(), savedComment.getContent());
+
+        return convertToResponseDTO(savedComment);
     }
 
-
     @PutMapping("/{commentId}")
-    public CommentResponseDTO updateComment(@PathVariable UUID commentId, @Valid @RequestBody CommentUpdateDTO commentUpdateDTO, Authentication authentication)
+    public CommentResponseDTO updateComment(@PathVariable UUID commentId, @Valid @RequestBody CommentUpdateDTO commentUpdateDTO,
+                                            Authentication authentication)
             throws CommentNotFound, UnauthorizedAccess {
+
         if (authentication == null || !authentication.isAuthenticated()) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
         }
@@ -75,26 +73,22 @@ public class CommentController {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
         }
 
-        // Récupération de l'ID utilisateur depuis l'authentification
-        CustomUserDetails userDetails = (CustomUserDetails) authentication.getPrincipal();
-        UUID currentUserId = userDetails.getUser().getId();
+        var userDetails = (CustomUserDetails) authentication.getPrincipal();
+        var currentUserId = userDetails.getUser().getId();
 
-        CommentModel updatedComment = new CommentModel(commentUpdateDTO.getContent());
+        var updatedComment = CommentModel.builder()
+                .content(commentUpdateDTO.getContent())
+                .build();
 
-        CommentModel savedComment = commentService.updateComment(commentId, updatedComment, currentUserId);
+        var savedComment = commentService.updateComment(commentId, updatedComment, currentUserId);
 
-        return new CommentResponseDTO(
-                savedComment.getId(),
-                savedComment.getContent(),
-                savedComment.getCreatedAt(),
-                savedComment.getUpdatedAt(),
-                savedComment.getUser().getUserName(),
-                savedComment.getUser().getProfilePicture()
-        );
+        return convertToResponseDTO(savedComment);
     }
 
     @DeleteMapping("/{commentId}")
-    public String deleteComment(@PathVariable UUID commentId, Authentication authentication) throws CommentNotFound, UnauthorizedAccess {
+    public String deleteComment(@PathVariable UUID commentId, Authentication authentication)
+            throws CommentNotFound, UnauthorizedAccess {
+
         if (authentication == null || !authentication.isAuthenticated()) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
         }
@@ -103,18 +97,18 @@ public class CommentController {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
         }
 
-        // Récupération de l'ID utilisateur depuis l'authentification
-        CustomUserDetails userDetails = (CustomUserDetails) authentication.getPrincipal();
-        UUID currentUserId = userDetails.getUser().getId();
+        var userDetails = (CustomUserDetails) authentication.getPrincipal();
+        var currentUserId = userDetails.getUser().getId();
 
         commentService.deleteComment(commentId, currentUserId);
 
         return "Commentaire supprimé avec succès";
     }
 
-    // Méthode recherche
     @GetMapping("/user/{userId}")
-    public List<CommentResponseDTO> getCommentsByUserId(@PathVariable UUID userId, Authentication authentication) throws UserNotFoundById {
+    public List<CommentResponseDTO> getCommentsByUserId(@PathVariable UUID userId, Authentication authentication)
+            throws UserNotFoundById {
+
         if (authentication == null || !authentication.isAuthenticated()) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
         }
@@ -123,22 +117,17 @@ public class CommentController {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
         }
 
-        List<CommentModel> comments = commentService.getByUserId(userId);
+        var comments = commentService.getByUserId(userId);
 
         return comments.stream()
-                .map(comment -> new CommentResponseDTO(
-                        comment.getId(),
-                        comment.getContent(),
-                        comment.getCreatedAt(),
-                        comment.getUpdatedAt(),
-                        comment.getUser().getUserName(),
-                        comment.getUser().getProfilePicture()
-                ))
-                .collect(Collectors.toList());
+                .map(this::convertToResponseDTO)
+                .toList();
     }
 
     @GetMapping("/post/{postId}")
-    public List<CommentResponseDTO> getCommentsByPostId(@PathVariable UUID postId, Authentication authentication) throws PostNotFoundById {
+    public List<CommentResponseDTO> getCommentsByPostId(@PathVariable UUID postId, Authentication authentication)
+            throws PostNotFoundById {
+
         if (authentication == null || !authentication.isAuthenticated()) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
         }
@@ -147,17 +136,52 @@ public class CommentController {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
         }
 
-        List<CommentModel> comments = commentService.getByPostId(postId);
+        var comments = commentService.getByPostId(postId);
 
         return comments.stream()
-                .map(comment -> new CommentResponseDTO(
-                        comment.getId(),
-                        comment.getContent(),
-                        comment.getCreatedAt(),
-                        comment.getUpdatedAt(),
-                        comment.getUser().getUserName(),
-                        comment.getUser().getProfilePicture()
-                ))
-                .collect(Collectors.toList());
+                .map(this::convertToResponseDTO)
+                .toList();
+    }
+
+    // =============== ENDPOINTS ADMIN UNIQUEMENT ===============
+
+    /**
+     * Supprimer n'importe quel commentaire (ADMIN UNIQUEMENT)
+     */
+    @DeleteMapping("/admin/{commentId}")
+    public String deleteCommentByAdmin(@PathVariable UUID commentId, Authentication authentication)
+            throws CommentNotFound {
+
+        if (authentication == null || !authentication.isAuthenticated()) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
+        }
+
+        if (!(authentication.getPrincipal() instanceof CustomUserDetails)) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
+        }
+
+        var userDetails = (CustomUserDetails) authentication.getPrincipal();
+        var currentUser = userDetails.getUser();
+
+        // Vérification admin
+        if (!currentUser.isAdmin()) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Accès réservé aux administrateurs");
+        }
+
+        commentService.deleteCommentByAdmin(commentId);
+        log.info("Admin {} a supprimé le commentaire {}", currentUser.getUserName(), commentId);
+
+        return "Commentaire supprimé avec succès par l'administrateur";
+    }
+
+    private CommentResponseDTO convertToResponseDTO(CommentModel comment) {
+        return CommentResponseDTO.builder()
+                .id(comment.getId())
+                .content(comment.getContent())
+                .createdAt(comment.getCreatedAt())
+                .updatedAt(comment.getUpdatedAt())
+                .userName(comment.getUser().getUserName())
+                .userProfilePicture(comment.getUser().getProfilePicture())
+                .build();
     }
 }
