@@ -1,362 +1,219 @@
 package com.FishOn.FishOn.Controller;
 
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.client.HttpClientErrorException.Unauthorized;
-import org.springframework.web.server.ResponseStatusException;
-
 import com.FishOn.FishOn.Config.CustomUserDetails;
 import com.FishOn.FishOn.DTO.Comment.CommentResponseDTO;
 import com.FishOn.FishOn.DTO.Post.PostCreateDTO;
 import com.FishOn.FishOn.DTO.Post.PostResponseDTO;
 import com.FishOn.FishOn.DTO.Post.PostUpdateDTO;
-import com.FishOn.FishOn.Exception.FishOnException.MissingDescriptionException;
-import com.FishOn.FishOn.Exception.FishOnException.MissingFishNameException;
-import com.FishOn.FishOn.Exception.FishOnException.MissingPhotoException;
-import com.FishOn.FishOn.Exception.FishOnException.MissingTitleException;
-import com.FishOn.FishOn.Exception.FishOnException.PostNotFoundById;
-import com.FishOn.FishOn.Exception.FishOnException.UnauthorizedAccess;
-import com.FishOn.FishOn.Exception.FishOnException.UnauthorizedModificationPost;
-import com.FishOn.FishOn.Exception.FishOnException.UserNotFoundByEmail;
-import com.FishOn.FishOn.Exception.FishOnException.UserNotFoundById;
-import com.FishOn.FishOn.Exception.FishOnException.UserNotFoundByUserName;
+import com.FishOn.FishOn.Exception.FishOnException.*;
 import com.FishOn.FishOn.Service.PostService;
-
 import jakarta.validation.Valid;
-
 import com.FishOn.FishOn.Model.*;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.core.Authentication;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.PutMapping;
-
-
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 
 /**
  * Controller REST pour la gestion des publications
- * Gère le fil d'actualité et les opérations CRUD sur les posts
- * 
- * Routes disponibles :
- * - GET /api/posts/feed : Récupération du fil d'actualité (protégé)
+ * LOMBOK UTILISÉ :
+ * @RequiredArgsConstructor : Injection par constructeur automatique
+ * @Slf4j : Logger automatique
  */
-@RestController // Annotation Spring : répond automatiquement en JSON
-@RequestMapping("/api/posts") // Préfixe pour toutes les routes de ce controller
+@RestController
+@RequestMapping("/api/posts")
+@RequiredArgsConstructor // LOMBOK : Remplace @Autowired
+@Slf4j // LOMBOK : Logger automatique
 public class PostController {
 
-    // Injection automatique du service métier pour les opérations sur les posts
-    @Autowired
-    private PostService postService;
+    private final PostService postService;
 
     /**
      * Récupération du fil d'actualité global
-     * Endpoint protégé : nécessite une authentification valide
-     * 
-     * Retourne tous les posts avec leurs commentaires dans l'ordre de création en base
-     * 
-     * @param authentication Objet d'authentification injecté automatiquement par Spring Security
-     * @return List<PostResponseDTO> contenant tous les posts avec leurs commentaires
-     * @throws ResponseStatusException 401 si l'utilisateur n'est pas authentifié
      */
-    @GetMapping("/feed") // Mapping pour GET /api/posts/feed
+    @GetMapping("/feed")
     public List<PostResponseDTO> getFeed(Authentication authentication) {
-
-        // Vérification de sécurité : s'assurer que l'utilisateur est bien authentifié
-        // Spring Security peut parfois passer un objet Authentication null ou non authentifié
         if (authentication == null || !authentication.isAuthenticated()) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
         }
 
-        // Vérification du type d'authentification : doit être notre CustomUserDetails
-        // Protection contre les autres types d'authentification (OAuth, JWT, etc.)
-        // Garantit que l'authentification provient de notre système de session
         if (!(authentication.getPrincipal() instanceof CustomUserDetails)) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
         }
 
-        // Récupération de tous les posts depuis la base de données
-        // Appel au service qui gère la logique métier et l'accès aux données
-        List<PostModel> posts = postService.getAll();
+        var posts = postService.getAll();
 
-        // Transformation des entités PostModel en DTOs PostResponseDTO
-        // Utilisation de Stream API pour une transformation fonctionnelle
         return posts.stream()
-                .map(post -> new PostResponseDTO(
-                        // Métadonnées du post
-                        post.getId(),
-                        post.getCreatedAt(),
-                        post.getUpdatedAt(),
-
-                        // Contenu principal du post
-                        post.getTitle(),
-                        post.getDescription(),
-                        post.getFishName(),
-                        post.getPhotoUrl(),
-
-                        // Données optionnelles de pêche
-                        post.getWeight(),
-                        post.getLength(),
-                        post.getLocation(),
-                        post.getCatchDate(),
-
-                        // Nom d'utilisateur qui a créé le post
-                        post.getUser().getUserName(),
-                        post.getUser().getProfilePicture(),
-
-                        // Conversion des commentaires associés au post
-                        // Stream imbriqué pour transformer CommentModel → CommentResponseDTO
-                        post.getComments().stream()
-                                .map(comment -> new CommentResponseDTO(
-                                        comment.getId(),
-                                        comment.getContent(),
-                                        comment.getCreatedAt(),
-                                        comment.getUpdatedAt(),
-                                        comment.getUser().getUserName(),
-                                        comment.getUser().getProfilePicture())) // Nom d'utilisateur qui a écrit le commentaire
-                                .collect(Collectors.toList()))) // Collecte des commentaires en List<CommentResponseDTO>
-                .collect(Collectors.toList()); // Collecte finale en List<PostResponseDTO>
+                .map(this::convertToResponseDTO)
+                .toList();
     }
-    
+
     @GetMapping("/{userName}")
     public List<PostResponseDTO> getPostsByUserName(Authentication authentication,
-            @PathVariable String userName) throws UserNotFoundByUserName {
+                                                    @PathVariable String userName) throws UserNotFoundByUserName {
 
-        // Vérification de sécurité : s'assurer que l'utilisateur est bien authentifié
-        // Spring Security peut parfois passer un objet Authentication null ou non authentifié
         if (authentication == null || !authentication.isAuthenticated()) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
         }
 
-        // Vérification du type d'authentification : doit être notre CustomUserDetails
-        // Protection contre les autres types d'authentification (OAuth, JWT, etc.)
-        // Garantit que l'authentification provient de notre système de session
         if (!(authentication.getPrincipal() instanceof CustomUserDetails)) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
         }
 
-        // Récupération de tout les posts d'un utilisateur
-        List<PostModel> postsUser = postService.getByUserUserName(userName);
+        var postsUser = postService.getByUserUserName(userName);
 
-        // Transformation des entités PostModel en DTOs PostResponseDTO
-        // Utilisation de Stream API pour une transformation fonctionnelle
         return postsUser.stream()
-                .map(post -> new PostResponseDTO(
-                        // Métadonnées du post
-                        post.getId(),
-                        post.getCreatedAt(),
-                        post.getUpdatedAt(),
-
-                        // Contenu principal du post
-                        post.getTitle(),
-                        post.getDescription(),
-                        post.getFishName(),
-                        post.getPhotoUrl(),
-
-                        // Données optionnelles de pêche
-                        post.getWeight(),
-                        post.getLength(),
-                        post.getLocation(),
-                        post.getCatchDate(),
-
-                        // Nom d'utilisateur qui a créé le post
-                        post.getUser().getUserName(),
-                        post.getUser().getProfilePicture(),
-
-                        // Conversion des commentaires associés au post
-                        // Stream imbriqué pour transformer CommentModel → CommentResponseDTO
-                        post.getComments().stream()
-                                .map(comment -> new CommentResponseDTO(
-                                        comment.getId(),
-                                        comment.getContent(),
-                                        comment.getCreatedAt(),
-                                        comment.getUpdatedAt(),
-                                        comment.getUser().getUserName(),
-                                        comment.getUser().getProfilePicture())) // Nom d'utilisateur qui a écrit le commentaire
-                                .collect(Collectors.toList()))) // Collecte des commentaires en List<CommentResponseDTO>
-                .collect(Collectors.toList()); // Collecte finale en List<PostResponseDTO>
+                .map(this::convertToResponseDTO)
+                .toList();
     }
 
     @PostMapping
     public PostResponseDTO createPost(@Valid @RequestBody PostCreateDTO postCreateDTO, Authentication authentication)
-        throws MissingTitleException, MissingDescriptionException, MissingFishNameException, MissingPhotoException, UserNotFoundById
-    {
-        // Vérification de sécurité identique à getUser()
+            throws MissingTitleException, MissingDescriptionException, MissingFishNameException, MissingPhotoException, UserNotFoundById {
         if (authentication == null || !authentication.isAuthenticated()) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
         }
 
-        // Vérification du type d'authentification : doit être notre CustomUserDetails
-        // Protection contre les autres types d'authentification (OAuth, JWT, etc.)
         if (!(authentication.getPrincipal() instanceof CustomUserDetails)) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
         }
 
-        // Récupération de l'ID utilisateur depuis l'authentification
-        // Garantit que l'utilisateur ne peut créer sa publication et non celle des autres
-        CustomUserDetails userDetails = (CustomUserDetails) authentication.getPrincipal();
-        UUID currentUserId = userDetails.getUser().getId();
+        var userDetails = (CustomUserDetails) authentication.getPrincipal();
+        var currentUserId = userDetails.getUser().getId();
 
-        // Conversion objet PostCreateDTO en objet PostModel
-        PostModel post = new PostModel(
-            // Champ obligatoire
-            postCreateDTO.getTitle(),
-            postCreateDTO.getDescription(),
-            postCreateDTO.getFishName(),
-            postCreateDTO.getPhotoUrl()
-        );
+        // LOMBOK : Utilisation du Builder pattern
+        var post = PostModel.builder()
+                .title(postCreateDTO.getTitle())
+                .description(postCreateDTO.getDescription())
+                .fishName(postCreateDTO.getFishName())
+                .photoUrl(postCreateDTO.getPhotoUrl())
+                .weight(postCreateDTO.getWeight())
+                .length(postCreateDTO.getLength())
+                .location(postCreateDTO.getLocation())
+                .catchDate(postCreateDTO.getCatchDate())
+                .build();
 
-        // Champ optionnel
-        post.setWeight(postCreateDTO.getWeight());
-        post.setLength(postCreateDTO.getLength());
-        post.setLocation(postCreateDTO.getLocation());
-        post.setCatchDate(postCreateDTO.getCatchDate());
+        var createPost = postService.createPost(currentUserId, post);
 
-        // Création publication
-        PostModel createPost = postService.createPost(currentUserId, post);
+        log.info("Nouvelle publication créée par {}: {}",
+                userDetails.getUser().getUserName(), createPost.getTitle());
 
-        return new PostResponseDTO(
-                // Métadonnées du post
-                createPost.getId(),
-                createPost.getCreatedAt(),
-                createPost.getUpdatedAt(),
-
-                // Contenu principal du post
-                createPost.getTitle(),
-                createPost.getDescription(),
-                createPost.getFishName(),
-                createPost.getPhotoUrl(),
-
-                // Données optionnelles de pêche
-                createPost.getWeight(),
-                createPost.getLength(),
-                createPost.getLocation(),
-                createPost.getCatchDate(),
-
-                // Nom d'utilisateur qui a créé le post
-                createPost.getUser().getUserName(),
-                createPost.getUser().getProfilePicture(),
-
-                createPost.getComments().stream()
-                        .map(comment -> new CommentResponseDTO(
-                                comment.getId(),
-                                comment.getContent(),
-                                comment.getCreatedAt(),
-                                comment.getUpdatedAt(),
-                                comment.getUser().getUserName(),
-                                comment.getUser().getProfilePicture()// Nom d'utilisateur qui a écrit le commentaire
-                        ))
-                        .collect(Collectors.toList()) // Collecte des commentaires en List<CommentResponseDTO>
-        );
+        return convertToResponseDTO(createPost);
     }
 
     @PutMapping("/{postId}")
     public PostResponseDTO updatePost(@PathVariable UUID postId, @Valid @RequestBody PostUpdateDTO postUpdateDTO,
-            Authentication authentication)
+                                      Authentication authentication)
             throws MissingTitleException, MissingDescriptionException, MissingFishNameException, MissingPhotoException,
-            UserNotFoundById, PostNotFoundById, UnauthorizedModificationPost
-    {
-        // Vérification de sécurité identique à getUser()
+            UserNotFoundById, PostNotFoundById, UnauthorizedModificationPost {
         if (authentication == null || !authentication.isAuthenticated()) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
         }
 
-        // Vérification du type d'authentification : doit être notre CustomUserDetails
-        // Protection contre les autres types d'authentification (OAuth, JWT, etc.)
         if (!(authentication.getPrincipal() instanceof CustomUserDetails)) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
         }
 
-        // Récupération de l'ID utilisateur depuis l'authentification
-        // Garantit que l'utilisateur ne peut créer sa publication et non celle des autres
-        CustomUserDetails userDetails = (CustomUserDetails) authentication.getPrincipal();
-        UUID currentUserId = userDetails.getUser().getId();
+        var userDetails = (CustomUserDetails) authentication.getPrincipal();
+        var currentUserId = userDetails.getUser().getId();
 
-        // Conversion objet PostCreateDTO en objet PostModel
-        PostModel post = new PostModel(
-            // Champ obligatoire
-            postUpdateDTO.getTitle(),
-            postUpdateDTO.getDescription(),
-            postUpdateDTO.getFishName(),
-            postUpdateDTO.getPhotoUrl()
-        );
+        var post = PostModel.builder()
+                .title(postUpdateDTO.getTitle())
+                .description(postUpdateDTO.getDescription())
+                .fishName(postUpdateDTO.getFishName())
+                .photoUrl(postUpdateDTO.getPhotoUrl())
+                .weight(postUpdateDTO.getWeight())
+                .length(postUpdateDTO.getLength())
+                .location(postUpdateDTO.getLocation())
+                .catchDate(postUpdateDTO.getCatchDate())
+                .build();
 
-        // Champ optionnel
-        post.setWeight(postUpdateDTO.getWeight());
-        post.setLength(postUpdateDTO.getLength());
-        post.setLocation(postUpdateDTO.getLocation());
-        post.setCatchDate(postUpdateDTO.getCatchDate());
+        var updatePost = postService.updatePost(currentUserId, postId, post);
 
-        // MAJ publication
-        PostModel updatePost = postService.updatePost(currentUserId, postId, post);
-
-        return new PostResponseDTO(
-                // Métadonnées du post
-                updatePost.getId(),
-                updatePost.getCreatedAt(),
-                updatePost.getUpdatedAt(),
-
-                // Contenu principal du post
-                updatePost.getTitle(),
-                updatePost.getDescription(),
-                updatePost.getFishName(),
-                updatePost.getPhotoUrl(),
-
-                // Données optionnelles de pêche
-                updatePost.getWeight(),
-                updatePost.getLength(),
-                updatePost.getLocation(),
-                updatePost.getCatchDate(),
-
-                // Nom d'utilisateur qui a créé le post
-                updatePost.getUser().getUserName(),
-                updatePost.getUser().getProfilePicture(),
-
-                updatePost.getComments().stream()
-                        .map(comment -> new CommentResponseDTO(
-                                comment.getId(),
-                                comment.getContent(),
-                                comment.getCreatedAt(),
-                                comment.getUpdatedAt(),
-                                comment.getUser().getUserName(),
-                                comment.getUser().getProfilePicture()// Nom d'utilisateur qui a écrit le commentaire
-                        ))
-                        .collect(Collectors.toList()) // Collecte des commentaires en List<CommentResponseDTO>
-        );
+        return convertToResponseDTO(updatePost);
     }
-    
+
     @DeleteMapping("/{postId}")
     public String deletePost(@PathVariable UUID postId, Authentication authentication)
-            throws PostNotFoundById, UserNotFoundById, UnauthorizedModificationPost
-    {
-        // Vérification de sécurité identique à getUser()
+            throws PostNotFoundById, UserNotFoundById, UnauthorizedModificationPost {
         if (authentication == null || !authentication.isAuthenticated()) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
         }
 
-        // Vérification du type d'authentification : doit être notre CustomUserDetails
-        // Protection contre les autres types d'authentification (OAuth, JWT, etc.)
         if (!(authentication.getPrincipal() instanceof CustomUserDetails)) {
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
         }
 
-        // Récupération de l'ID utilisateur depuis l'authentification
-        // Garantit que l'utilisateur ne peut créer sa publication et non celle des autres
-        CustomUserDetails userDetails = (CustomUserDetails) authentication.getPrincipal();
-        UUID currentUserId = userDetails.getUser().getId();
+        var userDetails = (CustomUserDetails) authentication.getPrincipal();
+        var currentUserId = userDetails.getUser().getId();
 
-        // Appel logique métier suppression publication
         postService.deletePost(currentUserId, postId);
 
-        return "Publication supprimé";
+        return "Publication supprimée";
+    }
+
+    // =============== ENDPOINTS ADMIN UNIQUEMENT ===============
+
+    /**
+     * Supprimer n'importe quelle publication (ADMIN UNIQUEMENT)
+     */
+    @DeleteMapping("/admin/{postId}")
+    public String deletePostByAdmin(@PathVariable UUID postId, Authentication authentication)
+            throws PostNotFoundById {
+
+        if (authentication == null || !authentication.isAuthenticated()) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Utilisateur non authentifié");
+        }
+
+        if (!(authentication.getPrincipal() instanceof CustomUserDetails)) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Type d'authentification invalide");
+        }
+
+        var userDetails = (CustomUserDetails) authentication.getPrincipal();
+        var currentUser = userDetails.getUser();
+
+        // Vérification admin
+        if (!currentUser.isAdmin()) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Accès réservé aux administrateurs");
+        }
+
+        postService.deletePostByAdmin(postId);
+        log.info("Admin {} a supprimé la publication {}", currentUser.getUserName(), postId);
+
+        return "Publication supprimée avec succès par l'administrateur";
+    }
+
+    private PostResponseDTO convertToResponseDTO(PostModel post) {
+        return PostResponseDTO.builder()
+                .id(post.getId())
+                .createdAt(post.getCreatedAt())
+                .updatedAt(post.getUpdatedAt())
+                .title(post.getTitle())
+                .description(post.getDescription())
+                .fishName(post.getFishName())
+                .photoUrl(post.getPhotoUrl())
+                .weight(post.getWeight())
+                .length(post.getLength())
+                .location(post.getLocation())
+                .catchDate(post.getCatchDate())
+                .userName(post.getUser().getUserName())
+                .userProfilePicture(post.getUser().getProfilePicture())
+                .comments(post.getComments().stream()
+                        .map(comment -> CommentResponseDTO.builder()
+                                .id(comment.getId())
+                                .content(comment.getContent())
+                                .createdAt(comment.getCreatedAt())
+                                .updatedAt(comment.getUpdatedAt())
+                                .userName(comment.getUser().getUserName())
+                                .userProfilePicture(comment.getUser().getProfilePicture())
+                                .build())
+                        .toList())
+                .build();
     }
 }
-
